# bayer-home-assignment

./: .gitignore  README.md  bert_auxilary_sentence.py  finetune_bert.py  pyproject.toml  tfidf_logreg.py
data/raw/: sentences_with_sentiment.xlsx
notebooks/: eda.ipynb  leave_one_out_validation.ipynb
src/: datasets.py  metric_accumulator.py  metrics.py  trainer.py  utils.py
src/callbacks/: __init__.py  early_stopping.py  save_checkpoints.py  utils.py
